--- a/app/views/attendance_reports/filter_report_pdf.erb
+++ b/app/views/attendance_reports/filter_report_pdf.erb
@@ -36,7 +36,7 @@
         <% else %>
           <h4> <%= "#{t('total_no_of_wrkng_hours')} = " + working_days.to_s %></h4>
         <% end %>
-        <h4> <%= "#{t('filtered')}: "+ @range.to_s + " " + @value.to_s %></h4>
+        <h4> <%= "#{t('filtered')}: "+ @range.to_s + " " + @value.to_s + "%" %></h4>
       </div>
       <div id="pdf-info">
         <table id="pdf-table" width="100%" cellspacing="0">
