--- a/app/views/batch_transfers/show.html.erb
+++ b/app/views/batch_transfers/show.html.erb
@@ -43,7 +43,7 @@
 
   <p><%= t('uncheck_message') %>.</p>
   <div class="sel-list">
-    <%= t('select') %>: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+    <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
     <%= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
   </div>
     <ul id="category-list">
