--- a/app/views/archived_student/generated_report3.html.erb
+++ b/app/views/archived_student/generated_report3.html.erb
@@ -43,7 +43,7 @@
         <tr class="tr-<%= cycle('odd','even') %>">
           <td class="col-3">
             <%= exam_group.name %>
-          </td
+          </td>
           <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
           <% exam_score = ArchivedExamScore.find_by_student_id(@student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
           <% if exam_group.exam_type == 'Marks' %>
@@ -51,7 +51,8 @@
             <td class="col-2"><%= exam_score.nil? ? '-' : exam.maximum_marks %></td>
             <td class="col-2">-</td>
           <% elsif exam_group.exam_type == 'Grades'%>
-            <td class="col-2">-</td><td>-</td>
+            <td class="col-2">-</td>
+            <td class="col-2">-</td>
             <td class="col-2"><%= exam_score.nil? ? '-' : exam_score.grading_level.name %></td>
           <% else %>
             <td class="col-2"><%= exam_score.nil? ? '-' : exam_score.marks %></td>
