--- a/app/views/finance/student_fee_receipt_pdf.erb
+++ b/app/views/finance/student_fee_receipt_pdf.erb
@@ -61,7 +61,7 @@
           <% @batch_discounts.each do |d| %>
             <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
               <td class="col-1"><%= i=1 %></td>
-              <td class="col-2"><%= shorten_string(d.name,60) %></td>
+              <td class="col-2"><%= d.name %></td>
               <td class="col-2"></td>
               <td class="col-6"><%= d.discount%> %</td>
             </tr>
@@ -69,7 +69,7 @@
           <% @student_discounts.each do |d| %>
             <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
               <td class="col-1"><%= i+=1 %></td>
-              <td class="col-2"><%= shorten_string(d.name,60) %></td>
+              <td class="col-2"><%= d.name %></td>
               <td class="col-2"></td>
               <td class="col-6"><%= d.discount%> %</td>
             </tr>
@@ -77,7 +77,7 @@
           <% @category_discounts.each do |d| %>
             <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
               <td class="col-1"><%= i+=1 %></td>
-              <td class="col-2"><%= shorten_string(d.name,60) %></td>
+              <td class="col-2"><%= d.name %></td>
               <td class="col-2"></td>
               <td class="col-6"><%= d.discount%> %</td>
             </tr>
