--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -71,7 +71,7 @@
 <div id="footer">
   <div id="footer_logo">
     <div id="powered_by">
-      <%= t('powered_by') %> <a href="http://www.foradian.com/" target="_blank">Fedena</a>
+      <%= t('powered_by') %> <a href="http://www.foradian.com/" target="_blank"><%= @comp_title %></a>
     </div>
     <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
 
