--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,24 +1,24 @@
 <%-# Fedena
-   #Copyright 2010 Foradian Technologies Private Limited
-   #
-   #This product includes software developed at
-   #Project Fedena - http://www.projectfedena.org/
-   #
-   #Licensed under the Apache License, Version 2.0 (the "License");
-   #you may not use this file except in compliance with the License.
-   #You may obtain a copy of the License at
-   #
-   #  http://www.apache.org/licenses/LICENSE-2.0
-   #
-   #Unless required by applicable law or agreed to in writing,
-   #software distributed under the License is distributed on an
-   #"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-   #KIND, either express or implied.  See the License for the
-   #specific language governing permissions and limitations
-   #under the License. -%>
+#Copyright 2010 Foradian Technologies Private Limited
+#
+#This product includes software developed at
+#Project Fedena - http://www.projectfedena.org/
+#
+#Licensed under the Apache License, Version 2.0 (the "License");
+#you may not use this file except in compliance with the License.
+#You may obtain a copy of the License at
+#
+#  http://www.apache.org/licenses/LICENSE-2.0
+#
+#Unless required by applicable law or agreed to in writing,
+#software distributed under the License is distributed on an
+#"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+#KIND, either express or implied.  See the License for the
+#specific language governing permissions and limitations
+#under the License. -%>
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html dir="<%= (rtl?) ? 'rtl' : 'ltr' %>">
   <head>
     <% @direction = (rtl?) ? 'rtl/' : '' %>
@@ -50,7 +50,7 @@
           <div id="header_link" >
             <%= t('logged_as') %>
             <%= link_to @current_user.first_name, :controller => 'user', :action => 'profile',
-                :id => @current_user.username %> &nbsp;|&nbsp;
+              :id => @current_user.username %> &nbsp;|&nbsp;
             <%= link_to t('messages'), :controller => "reminder", :action => "index" %><%= render :partial =>'layouts/reminder_count'%>&nbsp;|&nbsp;
             <%= link_to t('log_out'), :controller => 'user', :action => 'logout' %>  &nbsp;&nbsp;
           </div>
@@ -93,9 +93,11 @@
     <div id="footer">
       <div id="footer_logo">
         <div id="powered_by">
-          <%= t('powered_by') %> <a href="http://www.projectfedena.org/" target="_blank"><%= @comp_title %></a>
+          <%= t('powered_by') %> <a href=<%= "#{@comp_web_url}" %> target="_blank"><%= @comp_title %></a>
         </div>
-        <a href="http://www.projectfedena.org/"  target="_blank" class="footer-logo"></a>
+        <% unless @yaml_setting %>
+          <a href="http://www.projectfedena.org/"  target="_blank" class="footer-logo"></a>
+        <% end %>
       </div>
     </div>
   </body>
