--- a/app/views/user/forgot_password.erb
+++ b/app/views/user/forgot_password.erb
@@ -22,9 +22,6 @@
   <div id="top_logo">
     <h1>Fedena</h1>
   </div>
-  <div id="help_top">
-    <div id="help_link"><a href="http://www.fedena.com/help.html"><%= t('help') %></a></div>
-  </div>
   <% if @network_state.config_value.to_s == "Online" %>
     <div id="login_area_bg">
 
@@ -65,9 +62,11 @@
 <div id="footer">
   <div id="footer_logo">
     <div id="powered_by">
-     <%= t('powered_by') %> <a href="http://www.projectfedena.org/" target="_blank"><%= @comp_title %></a>
+      <%= t('powered_by') %> <a href=<%= "#{@comp_web_url}" %> target="_blank"><%= @comp_title %></a>
     </div>
-    <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
+    <% unless @yaml_setting %>
+      <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
+    <% end %>
 
   </div>
 </div>
