--- a/app/views/user/set_new_password.erb
+++ b/app/views/user/set_new_password.erb
@@ -20,13 +20,8 @@
 
 <div id="wrapper">
   <div id="top_logo">
-    <h1>Fedena</h1>
+    <%= image_tag current_school_detail.logo.url %>
   </div>
-
-  <div id="help_top">
-    <div id="help_link"><a href="http://www.fedena.com/help.html"><%= t('help') %></a></div>
-  </div>
-
   <div id="login_area_bg">
 
     <% form_for :set_new_password do |u| %>
