--- a/app/views/employee/edit2.erb
+++ b/app/views/employee/edit2.erb
@@ -33,7 +33,7 @@
   <% end %>
 
 
-  <% form_for :employee do |a| %>
+  <% form_for :employee,:id => @employee.id do |a| %>
     <%= error_messages_for 'employee' %>
       <span class="span-sub-heading"><%= t('home_address') %></span>
       <hr class="sub-heading"></hr>
