attendance report bug fix
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2511 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendance_reports/filter.html.erb
+++ b/app/views/attendance_reports/filter.html.erb
@@ -30,7 +30,7 @@
   <div class="label-field-pair">
     <label>
       <%= "#{t('total_no_of_wrkng_days')} : " + working_days.to_s %><br/>
-      <%= t('filtered') %>: <%=  @range %> <%= @value %>
+      <%= t('filtered') %>: <%=  @range %> <%= @value %> %
     </label>
   </div>
   <table id="listing" align="center" width="80%">
