--- a/public/stylesheets/batch_transfers/graduation.css
+++ b/public/stylesheets/batch_transfers/graduation.css
@@ -1,7 +1,10 @@
 .sel-list {
-    margin-left:650px;
-    margin-bottom: 2px;
-    width: 300px;
+    margin-left: 396px;
+    margin-top: -17px;
+}
+.sel-list a{
+    color: #BB0000;
+    text-decoration: none;
 }
 #category-list {
     clear : both;
@@ -61,7 +64,6 @@
     width: 85px;
 }
 #category-list li div a {
-    color : #000;
     font-size:14px;
     text-decoration: none;
 }
