--- a/public/stylesheets/batch_transfers/show.css
+++ b/public/stylesheets/batch_transfers/show.css
@@ -1,7 +1,10 @@
 .sel-list {
-    margin-left: 650px;
-    margin-bottom: 2px;
-    width: 300px;
+    margin-left: 435px;
+    margin-top: -17px;
+}
+.sel-list a{
+    color: #BB0000;
+    text-decoration: none;
 }
 #category-list {
     clear : both;
@@ -73,7 +76,6 @@ width:204px;
 
 }
 #category-list li div a {
-    color : #000;
     font-size:14px;
     text-decoration: none;
 }
