--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -26,7 +26,7 @@
 
 <div class="extender"></div>
 <% total_fees =0 %>
-<% form_for :fees, :url => {:action => 'fees_submission_save', :student => @student.id,:date => @date.id, :fine=>@fine} do |form| %>
+<% form_remote_for :fees, :url => {:action => 'fees_submission_save', :student => @student.id,:date => @date.id, :fine=>@fine} do |form| %>
 
   <% unless @fee_particulars.nil? %>
     <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
