current school logo to show in forgot password page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2519 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/forgot_password.erb
+++ b/app/views/user/forgot_password.erb
@@ -20,7 +20,7 @@
 
 <div id="wrapper">
   <div id="top_logo">
-    <h1>Fedena</h1>
+    <%= image_tag current_school_detail.logo.url %>
   </div>
   <% if @network_state.config_value.to_s == "Online" %>
     <div id="login_area_bg">
